--- a/contract.html
+++ b/contract.html
@@ -90,26 +90,20 @@
   </p>
 
   <p>
-  This agreement renting equipment for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ gross for "<strong id="total-days">[Shooting Days]</strong>" shooting days, and if the use of those equipment exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
+  This agreement renting equipment for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ gross for <strong id="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipment exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
   </p>
 
   <p>
-  Production cost are divided into <strong><span id="total-termin">[Total Termin]</span></strong> termin, which include : 
+  Production cost are divided into <strong style="font-weight: normal;"><span id="total-termin">[Total Termin]</span></strong> termin, which include : 
   </p>
   <p>
-  Termin 1 <strong><span id="termin-1">[Termin 1]</span></strong> = <strong><span id="total-1">[Total 1]</span></strong> ( Payment due date on <strong style="margin-top: 0px;"><span id="termin-date-1">[Termin Date 1]</span></strong> )
+  Termin 1 <strong style="font-weight: normal;"><span id="termin-1">[Termin 1]</span></strong> = <strong><span id="total-1">[Total 1]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-1">[Termin Date 1]</span></strong> )
   </p>
   <p>
-  Termin 2 <strong><span id="termin-2">[Termin 2]</span></strong> = <strong><span id="total-2">[Total 2]</span></stron
+  Termin 2 <strong style="font-weight: normal;"><span id="termin-2">[Termin 2]</span></strong> = <strong><span id="total-2">[Total 2]</span></stron ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-2">[Termin Date 2]</span></strong> )
   </p>
   <p>
-  Payment due date on <strong style="margin-top: 0px;"><span id="termin-date-2">[Termin Date 2]</span></strong>
-  </p>
-  <p>
-  Termin 3 <strong><span id="termin-3">[Termin 3]</span></strong> = <strong><span id="total-3">[Total 3]</span></stron
-  </p>
-  <p>
-  Payment due date on <strong style="margin-top: 0px;"><span id="termin-date-3">[Termin Date 3]</span></strong>
+  Termin 3 <strong style="font-weight: normal;"><span id="termin-3">[Termin 3]</span></strong> = <strong><span id="total-3">[Total 3]</span></stron ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-3">[Termin Date 3]</span></strong> )
   </p>
     
   </div>
