--- a/contract.html
+++ b/contract.html
@@ -100,10 +100,10 @@
   Termin 1 <strong style="font-weight: normal;"><span id="termin-1">[Termin 1]</span></strong> = <strong><span id="total-1">[Total 1]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-1">[Termin Date 1]</span></strong> )
   </p>
   <p>
-  Termin 2 <strong style="font-weight: normal;"><span id="termin-2">[Termin 2]</span></strong> = <strong><span id="total-2">[Total 2]</span></stron ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-2">[Termin Date 2]</span></strong> )
+  Termin 2 <strong style="font-weight: normal;"><span id="termin-2">[Termin 2]</span></strong> = <strong><span id="total-2">[Total 2]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-2">[Termin Date 2]</span></strong> )
   </p>
   <p>
-  Termin 3 <strong style="font-weight: normal;"><span id="termin-3">[Termin 3]</span></strong> = <strong><span id="total-3">[Total 3]</span></stron ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-3">[Termin Date 3]</span></strong> )
+  Termin 3 <strong style="font-weight: normal;"><span id="termin-3">[Termin 3]</span></strong> = <strong><span id="total-3">[Total 3]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-3">[Termin Date 3]</span></strong> )
   </p>
     
   </div>
