--- a/contract.html
+++ b/contract.html
@@ -51,26 +51,6 @@
     .section {
       margin-bottom: 30px;
     }
-    .termin {
-      border: 1px solid #ccc;
-      padding: 16px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      background-color: #f9f9f9;
-    }
-    .termin-title {
-      font-weight: bold;
-      font-size: 18px;
-      margin-bottom: 8px;
-    }
-    .amount {
-      font-size: 16px;
-      margin-bottom: 4px;
-    }
-    .due-date {
-      font-size: 14px;
-      color: #555;
-    }
   </style>
 </head>
 <body>
@@ -90,7 +70,7 @@
   </p>
 
   <p>
-  This agreement renting equipment for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ gross for <strong id="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipment exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
+  This agreement renting equipments for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ gross for <strong id="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipments exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
   </p>
 
   <p>
@@ -105,10 +85,33 @@
   <p>
   Termin 3 (<strong style="font-weight: normal;"><span id="termin-3">[Termin 3]</span></strong>) = <strong><span id="total-3">[Total 3]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-3">[Termin Date 3]</span></strong> )
   </p>
+
+  <p>
+  Payment above transfer to : 
+  </p>
+
+  <p>
+  Both parties agreed that everything which related tax costs government that arose from transaction rent of this equipment becomes both parties responsibility that appropriate with provision and legal regulations which happen in the Republic of Indonesia.
+  </p>
+  <p>
+  For payment purposes tax, Tenant Party agrees and willing to give Company NPWP and other identity that are needed.
+  </p>
+  <p>
+  Period time of this equipment rent is for 30 shooting days based on published working schedule from the Tenant Party along with Tenant Party’s agreement signature process.
+  </p>
+  <p>
+  If there is an addition shooting days by Tenant Party after reaching agreed a duration for Tenant Party is willing to pay extra charge per day.
+  </p>
+  <p>
+  Tenant Party provides transportation for the transport of equipment which rented with use a vehicle that meets safety requirements and roadworthy.
+  </p>
+  <p>
+  Tenant Party understand that for lighting equipment and grips are not listed cost insurance in this rental agreement, so if there is a problem occurs which caused by usage of unreasonable, including :
+  </p>
     
   </div>
   
-  <!-- Konten selanjutnya akan ditambahkan di sini -->
+
   
   <script>
     const urlParams = new URLSearchParams(window.location.search);
