--- a/contract.html
+++ b/contract.html
@@ -97,7 +97,7 @@
   For payment purposes tax, Tenant Party agrees and willing to give Company NPWP and other identity that are needed.
   </p>
   <p>
-  Period time of this equipment rent is for 30 shooting days based on published working schedule from the Tenant Party along with Tenant Party’s agreement signature process.
+  Period time of this equipment rent is for <strong style="font-weight: normal;" id="total-days">[Shooting Days]</strong> shooting days based on published working schedule from the Tenant Party along with Tenant Party’s agreement signature process.
   </p>
   <p>
   If there is an addition shooting days by Tenant Party after reaching agreed a duration for Tenant Party is willing to pay extra charge per day.
