--- a/contract.html
+++ b/contract.html
@@ -70,7 +70,7 @@
   </p>
 
   <p>
-  This agreement renting equipments for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ gross for <strong id="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipments exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
+  This agreement renting equipments for Film on <strong id="shoot-date">[Date of Shoot]</strong> with Quotation Number <strong id="quote-number">[Quotation Number]</strong> and have obtained approval from Tenant Party with production cost <strong id="grand-total">[Grand Total]</strong> “<em id="grand-total-text">[Grand Total Text]</em>“ gross for <strong class="total-days">[Shooting Days]</strong> shooting days, and if the use of those equipments exceeds shooting day, additional fees will be charged to Tenant Party with Rp5.000.000,-/day.
   </p>
 
   <p>
@@ -97,7 +97,7 @@
   For payment purposes tax, Tenant Party agrees and willing to give Company NPWP and other identity that are needed.
   </p>
   <p>
-  Period time of this equipment rent is for <strong style="font-weight: normal;"><span id="total-days">[Shooting Days]</span></strong> shooting days based on published working schedule from the Tenant Party along with Tenant Party’s agreement signature process.
+  Period time of this equipment rent is for <strong style="font-weight: normal;"><span class="total-days">[Shooting Days]</span></strong> shooting days based on published working schedule from the Tenant Party along with Tenant Party’s agreement signature process.
   </p>
   <p>
   If there is an addition shooting days by Tenant Party after reaching agreed a duration for Tenant Party is willing to pay extra charge per day.
