--- a/contract.html
+++ b/contract.html
@@ -55,6 +55,7 @@
     display: flex;
     justify-content: flex-start;
     font-size: 14px;
+    font-weight: bold;
     margin: 8px 0;
     gap: 1%;
     }
