--- a/contract.html
+++ b/contract.html
@@ -127,7 +127,7 @@
   Both parties agreed that everything which related tax costs government that arose from transaction rent of this equipment becomes both parties responsibility that appropriate with provision and legal regulations which happen in the Republic of Indonesia.
   </p>
   <p>
-  For payment purposes tax, Tenant Party agrees and willing to give Company NPWP and other identity that are needed.
+  For payment purposes tax, Tenant Party and Rental Party agrees and willing to give Company NPWP and other identity that are needed.
   </p>
   <p>
   Period time of this equipment rent is for <strong style="font-weight: normal;"><span class="total-days">[Shooting Days]</span></strong> shooting days based on published working schedule from the Tenant Party along with Tenant Party’s agreement signature process.
