--- a/contract.html
+++ b/contract.html
@@ -141,7 +141,23 @@
   <p>
   Tenant Party understand that for lighting equipment and grips are not listed cost insurance in this rental agreement, so if there is a problem occurs which caused by usage of unreasonable, including :
   </p>
-    
+
+  <p>
+  1.     Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.  
+  </p>
+  <p>
+  2.     All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.
+  </p>
+
+  <p>
+  For the scenes production outside the city or stay overnight, Tenant Party must provide all these services for equipment crew guard corresponding with Tenant Party policy, which include lodging accomodation, transportation, etc.
+  </p>  
+  <p>
+  Tenant Party required to confirm crew call and shooting location one day previously to Rental Party or equipment crew guard in a field according with the schedule.
+  </p>
+  <p>
+  These Contract Agreement is formed from the agreed quotation from Tenant Party and Rental Party. By signing every page Tenant Party is deemed to have read and agreed with everything which written therein.
+  </p>
   </div>
   
 
