--- a/contract.html
+++ b/contract.html
@@ -143,10 +143,10 @@
   </p>
 
   <p>
-  1.<strong>      </strong>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.  
+  <strong style="width: 50px;">1.</strong>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.  
   </p>
   <p>
-  2.<strong>      </strong>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.
+  <strong style="width: 50px;">2.</strong>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.
   </p>
 
   <p>
