--- a/contract.html
+++ b/contract.html
@@ -60,7 +60,7 @@
     gap: 1%;
     }
     .label-row span:first-child {
-    width: 200px;  /* Atur agar semua label panjangnya sama */
+    width: 100px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
 
@@ -142,9 +142,10 @@
   Tenant Party understand that for lighting equipment and grips are not listed cost insurance in this rental agreement, so if there is a problem occurs which caused by usage of unreasonable, including :
   </p>
 
-  <p>
-  <strong style="width: 50px;">1.</strong>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.  
-  </p>
+  <div class="label-row">
+  <span>1.</span>
+  <span> <span>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
+  </div> 
   <p>
   <strong style="width: 50px;">2.</strong>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.
   </p>
