--- a/contract.html
+++ b/contract.html
@@ -60,7 +60,7 @@
     gap: 1%;
     }
     .label-row span:first-child {
-    width: 100px;  /* Atur agar semua label panjangnya sama */
+    width: 150px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
 
@@ -143,13 +143,14 @@
   </p>
 
   <div class="label-row">
-  <span>1.</span>
-  <span> <span>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
+  <span style="font-weight: normal;">1.</span>
+  <span> <span style="font-weight: normal;">Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
   </div> 
-  <p>
-  <strong style="width: 50px;">2.</strong>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.
-  </p>
-
+  <div class="label-row">
+  <span style="font-weight: normal;">2.</span>
+  <span> <span style="font-weight: normal;">All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.</span></span>
+  </div> 
+ 
   <p>
   For the scenes production outside the city or stay overnight, Tenant Party must provide all these services for equipment crew guard corresponding with Tenant Party policy, which include lodging accomodation, transportation, etc.
   </p>  
