--- a/contract.html
+++ b/contract.html
@@ -63,6 +63,18 @@
     width: 150px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
+    .label-paragraf {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 8px 0;
+    gap: 1%;
+    }
+    .label-paragraf span:first-child {
+    width: 100px;  /* Atur agar semua label panjangnya sama */
+    text-align: left;
+    }
 
   </style>
 </head>
@@ -142,13 +154,13 @@
   Tenant Party understand that for lighting equipment and grips are not listed cost insurance in this rental agreement, so if there is a problem occurs which caused by usage of unreasonable, including :
   </p>
 
-  <div class="label-row">
-  <span style="font-weight: normal;">1.</span>
-  <span> <span style="font-weight: normal;">Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
+  <div class="label-paragraf">
+  <span>1.</span>
+  <span> <span>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
   </div> 
-  <div class="label-row">
-  <span style="font-weight: normal;">2.</span>
-  <span> <span style="font-weight: normal;">All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.</span></span>
+  <div class="label-paragraf">
+  <span>2.</span>
+  <span> <span>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.</span></span>
   </div> 
  
   <p>
