--- a/contract.html
+++ b/contract.html
@@ -155,12 +155,12 @@
   </p>
 
   <div class="label-paragraf">
-  <span></span>
-  <span>1| <span>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
+  <span>1.</span>
+  <span>| <span>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
   </div> 
   <div class="label-paragraf">
-  <span></span>
-  <span>2| <span>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.</span></span>
+  <span>2.</span>
+  <span>| <span>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.</span></span>
   </div> 
  
   <p>
