--- a/contract.html
+++ b/contract.html
@@ -63,7 +63,7 @@
     width: 150px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
-    .label-paragraf {
+    .label-paragraf1 {
     display: flex;
     justify-content: flex-start;
     font-size: 14px;
@@ -71,8 +71,20 @@
     margin: 8px 0;
     gap: 1%;
     }
-    .label-paragraf span:first-child {
+    .label-paragraf1 span:first-child {
     width: 100px;  /* Atur agar semua label panjangnya sama */
+    text-align: left;
+    }
+    .label-paragraf2 {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 8px 0;
+    gap: 1%;
+    }
+    .label-paragraf2 span:first-child {
+    width: 80px;  /* Atur agar semua label panjangnya sama */
     text-align: left;
     }
 
@@ -158,7 +170,7 @@
   <span>1.</span>
   <span>| <span>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
   </div> 
-  <div class="label-paragraf">
+  <div class="label-paragraf2">
   <span>2.</span>
   <span>| <span>All risks of damage arising from the use of equipment for dangerous scenes production as in the example above and without confirmation to the Rental Party in advance, then be the full responsibility of Tenant Party.</span></span>
   </div> 
