--- a/contract.html
+++ b/contract.html
@@ -166,7 +166,7 @@
   Tenant Party understand that for lighting equipment and grips are not listed cost insurance in this rental agreement, so if there is a problem occurs which caused by usage of unreasonable, including :
   </p>
 
-  <div class="label-paragraf">
+  <div class="label-paragraf1">
   <span>1.</span>
   <span>| <span>Used for dangerous scenes such as explosion scenes, artificial rain scenes, racing scenes, scenes fire, equipment submerged in water, crash action and rigging, then for Tenant Party must inform the Rental Party in advance and sign a letter special agreement for this.</span></span>
   </div> 
