--- a/contract.html
+++ b/contract.html
@@ -123,6 +123,11 @@
   Termin 3 (<strong style="font-weight: normal;"><span id="termin-3">[Termin 3]</span></strong>) = <strong><span id="total-3">[Total 3]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-3">[Termin Date 3]</span></strong> )
   </p>
 
+  <div class="label-row">
+  <span>Termin 1 (<strong style="font-weight: normal;"><span id="termin-1">[Termin 1]</span></strong>)</span>
+  <span>: <span><strong><span id="total-1">[Total 1]</span></strong> ( Payment due date on <strong style="font-weight: normal;"><span id="termin-date-1">[Termin Date 1]</span></strong> )</span></span>
+  </div> 
+
   <p>
   Payment above transfer to : 
   </p>
